@@ -35,8 +35,9 @@ struct VcfWriterRnaSV : public VcfWriterSV, VcfWriterScoredSV
     VcfWriterRnaSV(
         const std::string& referenceFilename,
         const SVLocusSet& set,
-        std::ostream& os) :
-        VcfWriterSV(referenceFilename,set,os),
+        std::ostream& os,
+        const bool& isOutputContig) :
+        VcfWriterSV(referenceFilename, set, os, isOutputContig),
         _rnaInfoPtr(nullptr)
     {}
 
