@@ -35,8 +35,9 @@ struct VcfWriterTumorSV : public VcfWriterSV, VcfWriterScoredSV
         const bool isMaxDepthFilter,
         const std::string& referenceFilename,
         const SVLocusSet& set,
-        std::ostream& os) :
-        VcfWriterSV(referenceFilename, set, os),
+        std::ostream& os,
+        const bool& isOutputContig) :
+        VcfWriterSV(referenceFilename, set, os, isOutputContig),
         _tumorOpt(tumorOpt),
         _isMaxDepthFilter(isMaxDepthFilter),
         _tumorInfoPtr(nullptr)
